--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 /* Main Style */
 body{
     padding: 10px;
-    
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: light;
 }
 
 
@@ -64,17 +66,39 @@ body{
    padding-right: 30px;
 }
 
+.icons a {
+margin: 1px;
+scale: 75%;
+}
+.resume {
+    background-color: #C3F5E4;
+    font-size: 16px;
+    font-family: "Roboto Serif", serif;
+    font-weight: 400;
+    outline:#C3F5E4;
 
+    
+}
 
 /* Content */
 .contentHeader{
     display: flex;
     justify-content: center;
-    font-size: 36px;
+    font-size: 40px;
+    font-family: "Roboto Serif", serif;
+    font-weight: 300;
+    margin: 50px 0px 20px 0px;
+  
 }
 .headerLine{
-    height: 20px;
-    background-color: aquamarine;
+    height: 1px;
+    background-color: black;
+    margin-bottom: 50px;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 /* Footer */
@@ -82,9 +106,18 @@ body{
     height: 5px;
     background-color: #C3F5E4;
 }
+.copyRight{
+    font-size: 12px;
+    display: flex;
+    justify-content:right;
+    align-items: center;
+    padding-right: 30px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
 
+}
 
-
+/* Other Pages Content Style starts from here */
 
 /* Home Content */
 .contentHome{
